--- a/css/ayoakinnawo.webflow.css
+++ b/css/ayoakinnawo.webflow.css
@@ -260,7 +260,7 @@ figcaption {
 }
 
 .paragraph-light {
-  opacity: .6;
+  opacity: 1;
   text-decoration: none;
 }
 
@@ -270,7 +270,7 @@ figcaption {
 }
 
 .section {
-  margin-top: 14.5em;
+  margin-top: 8em;
   margin-left: 30px;
   margin-right: 30px;
 }
@@ -481,15 +481,18 @@ figcaption {
   height: 460px;
   text-align: center;
   background-color: #f4f4f4;
-  background-image: url('https://d3e54v103j8qbb.cloudfront.net/img/background-image.svg');
+  background-image: url('../images/Screen-Shot-2023-05-28-at-5.31.50-PM.png');
   background-position: 50%;
   background-size: cover;
+  border: 1px solid rgba(0, 0, 0, .28);
+  border-radius: 20px;
   flex-direction: column;
   justify-content: center;
   align-items: stretch;
   margin-bottom: 40px;
   text-decoration: none;
   display: flex;
+  position: relative;
 }
 
 .work-image:hover {
@@ -514,7 +517,8 @@ figcaption {
   background-image: url('../images/Dashboard.jpg');
   background-position: 50% 0;
   background-size: cover;
-  border: 1px solid rgba(0, 0, 0, .5);
+  border: 1px solid rgba(0, 0, 0, .35);
+  position: relative;
 }
 
 .work-image.cc-work-4:hover {
@@ -526,6 +530,7 @@ figcaption {
   background-image: url('../images/Screen-Shot-2023-05-28-at-5.31.50-PM.png');
   background-size: cover;
   border: 1px solid rgba(0, 0, 0, .5);
+  position: relative;
 }
 
 .work-image.cc-work-3:hover {
@@ -794,8 +799,8 @@ figcaption {
   grid-row-gap: 30px;
   grid-template: ". ."
   / 1fr 2.5fr;
-  margin-top: 120px;
-  margin-bottom: 120px;
+  margin-top: 60px;
+  margin-bottom: 60px;
 }
 
 .detail-image {
@@ -950,9 +955,9 @@ figcaption {
 
 .link-block {
   height: 460px;
-  background-image: url('../images/ezgif.com-optimize-13.gif');
-  background-position: 50%;
-  background-size: contain;
+  background-image: url('../images/ezgif.com-video-to-gif-3.gif');
+  background-position: 0 0;
+  background-size: cover;
   border: 1px solid #000;
   flex-direction: column;
   justify-content: center;
@@ -969,10 +974,12 @@ figcaption {
   background-image: url('../images/Proj.2-.png');
   background-position: 50%;
   background-size: cover;
-  border: 1px solid #000;
+  border: 1px solid rgba(0, 0, 0, .35);
+  border-radius: 20px;
   flex-direction: column;
   justify-content: center;
   display: flex;
+  position: relative;
 }
 
 .link-block-2:hover {
@@ -1456,7 +1463,9 @@ figcaption {
 }
 
 .div-block-13 {
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
   margin-top: 20px;
   display: flex;
 }
@@ -1470,11 +1479,13 @@ figcaption {
 }
 
 .text-span-11 {
+  opacity: .7;
   font-style: normal;
   text-decoration: none;
 }
 
 .text-span-12 {
+  color: #000;
   text-decoration: underline;
 }
 
@@ -1502,7 +1513,7 @@ figcaption {
 }
 
 .gallery {
-  margin-top: 10em;
+  margin-top: 2em;
   margin-left: 30px;
   margin-right: 30px;
 }
@@ -1547,6 +1558,175 @@ figcaption {
 
 .html-embed-4 {
   line-height: 16px;
+}
+
+.link-block-copy {
+  height: 460px;
+  background-image: url('../images/ezgif.com-video-to-gif-3.gif');
+  background-position: 0 0;
+  background-size: cover;
+  border: 1px solid rgba(0, 0, 0, .35);
+  border-radius: 20px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: stretch;
+  display: flex;
+  position: relative;
+}
+
+.link-block-copy:hover {
+  filter: saturate(160%);
+  mix-blend-mode: normal;
+}
+
+.hovershow {
+  opacity: 0;
+  border-radius: 20px;
+  flex-direction: column;
+  position: absolute;
+  top: 0%;
+  bottom: 0%;
+  left: 0%;
+  right: 0%;
+}
+
+.hovershow:hover {
+  opacity: 1;
+  text-align: center;
+  background-color: rgba(255, 255, 255, .72);
+  justify-content: center;
+  align-items: center;
+  display: flex;
+}
+
+.text-block-4 {
+  font-weight: 700;
+}
+
+.link-block-copy-copy {
+  height: 460px;
+  background-image: url('../images/Screen-Shot-2023-07-04-at-1.05.53-PM.png');
+  background-position: 50%;
+  background-size: cover;
+  background-attachment: scroll;
+  border: 1px solid rgba(14, 13, 13, .35);
+  border-radius: 20px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: stretch;
+  display: flex;
+  position: relative;
+}
+
+.link-block-copy-copy:hover {
+  mix-blend-mode: exclusion;
+}
+
+.div-block-18 {
+  opacity: 0;
+  border-radius: 20px;
+  justify-content: center;
+  display: block;
+  position: absolute;
+  top: 0%;
+  bottom: 0%;
+  left: 0%;
+  right: 0%;
+}
+
+.div-block-18:hover {
+  opacity: 1;
+  background-color: rgba(255, 255, 255, .67);
+  flex-direction: column;
+  align-items: center;
+  display: flex;
+}
+
+.div-block-19 {
+  position: absolute;
+  top: 0%;
+  bottom: 0%;
+  left: 0%;
+  right: 0%;
+}
+
+.div-block-19:hover {
+  background-color: rgba(0, 0, 0, 0);
+  justify-content: center;
+  align-items: center;
+  display: block;
+}
+
+.div-block-20 {
+  position: absolute;
+  top: 0%;
+  bottom: 0%;
+  left: 0%;
+  right: 0%;
+}
+
+.div-block-20:hover {
+  background-color: rgba(0, 0, 0, .97);
+}
+
+.div-block-21 {
+  position: absolute;
+  top: 0%;
+  bottom: 0%;
+  left: 0%;
+  right: 0%;
+}
+
+.div-block-21:hover {
+  background-color: rgba(12, 0, 0, .72);
+}
+
+.div-block-22 {
+  position: absolute;
+  top: 0%;
+  bottom: 0%;
+  left: 0%;
+  right: 0%;
+}
+
+.project1skillset {
+  grid-column-gap: 28px;
+  grid-row-gap: 28px;
+  grid-template-rows: auto;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-auto-columns: 1fr;
+  justify-content: center;
+  align-items: center;
+  justify-items: center;
+  display: grid;
+}
+
+.div-block-23 {
+  margin-top: 40px;
+}
+
+.mainsection {
+  margin-top: 15em;
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+.mainsection.cc-contact {
+  background-color: #f4f4f4;
+  padding-left: 80px;
+  padding-right: 80px;
+}
+
+.link-block-5, .link-block-6 {
+  text-decoration: none;
+}
+
+.div-block-24 {
+  border-radius: 0;
+}
+
+.text-block-5 {
+  font-weight: 700;
 }
 
 @media screen and (max-width: 991px) {
@@ -1796,6 +1976,16 @@ figcaption {
     padding-left: 0;
     padding-right: 0;
   }
+
+  .project1skillset {
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-content: center;
+  }
+
+  .mainsection.cc-contact {
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
 
 @media screen and (max-width: 767px) {
@@ -1880,6 +2070,7 @@ figcaption {
 
   .contact-form-wrap {
     text-align: left;
+    display: none;
   }
 
   .footer-wrap {
@@ -2081,6 +2272,22 @@ figcaption {
   .gallery1.cc-contact {
     padding: 15px;
   }
+
+  .project1skillset {
+    grid-column-gap: 72px;
+    grid-row-gap: 32px;
+    grid-template-columns: auto auto;
+    transform: scale(.96);
+  }
+
+  .mainsection {
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+
+  .mainsection.cc-contact {
+    padding: 15px;
+  }
 }
 
 @media screen and (max-width: 479px) {
@@ -2172,6 +2379,11 @@ figcaption {
   .brix---image-wrapper-br-24px {
     border-radius: 16px;
   }
+
+  .project1skillset {
+    grid-column-gap: 48px;
+    grid-row-gap: 32px;
+  }
 }
 
 #w-node-dff26f68-5731-3efa-d3dd-8f65c72d8fa5-3fff4113 {
@@ -2246,10 +2458,6 @@ figcaption {
   grid-area: 2 / 3 / 3 / 5;
 }
 
-#w-node-_2a25cd45-26f6-19d4-1e30-79f3aa4a0e43-ecff4118 {
-  grid-area: span 1 / span 2 / span 1 / span 2;
-}
-
 #w-node-b915ad84-715b-fc9d-8156-ee63d52fd223-ecff4118 {
   grid-area: 1 / 1 / 2 / 2;
 }
@@ -2279,26 +2487,6 @@ figcaption {
 }
 
 #w-node-_9fda4a37-cb21-e2a1-58de-88a206fa61ae-82ff4119 {
-  grid-area: 1 / 1 / 2 / 2;
-}
-
-#w-node-_0befc76b-828c-2822-f9fa-f2c6de040bbf-78ff411a {
-  grid-area: 1 / 1 / 2 / 4;
-}
-
-#w-node-_0befc76b-828c-2822-f9fa-f2c6de040bc4-78ff411a {
-  grid-area: 2 / 1 / 3 / 3;
-}
-
-#w-node-_0befc76b-828c-2822-f9fa-f2c6de040bc9-78ff411a {
-  grid-area: 2 / 3 / 3 / 5;
-}
-
-#w-node-b915ad84-715b-fc9d-8156-ee63d52fd22b-78ff411a {
-  grid-area: 1 / 2 / 2 / 3;
-}
-
-#w-node-_32040423-4078-1b23-6771-e6c78f8a716d-78ff411a {
   grid-area: 1 / 1 / 2 / 2;
 }
 
@@ -2341,26 +2529,6 @@ figcaption {
 
   #w-node-b915ad84-715b-fc9d-8156-ee63d52fd22b-82ff4119 {
     grid-area: 2 / 1 / 3 / 2;
-  }
-
-  #w-node-_0befc76b-828c-2822-f9fa-f2c6de040bbf-78ff411a {
-    grid-area: 1 / 1 / 2 / 2;
-  }
-
-  #w-node-_0befc76b-828c-2822-f9fa-f2c6de040bc4-78ff411a {
-    grid-column-end: 2;
-  }
-
-  #w-node-_0befc76b-828c-2822-f9fa-f2c6de040bc9-78ff411a {
-    grid-area: 3 / 1 / 4 / 2;
-  }
-
-  #w-node-b915ad84-715b-fc9d-8156-ee63d52fd22b-78ff411a {
-    grid-area: 2 / 1 / 3 / 2;
-  }
-
-  #w-node-_32040423-4078-1b23-6771-e6c78f8a716d-78ff411a {
-    grid-area: 1 / 1 / 2 / 2;
   }
 }
 
