--- a/css/ayoakinnawo.webflow.css
+++ b/css/ayoakinnawo.webflow.css
@@ -1729,6 +1729,18 @@ figcaption {
   font-weight: 700;
 }
 
+.resumemain {
+  margin-top: 12em;
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+.resumemain.cc-contact {
+  background-color: #f4f4f4;
+  padding-left: 80px;
+  padding-right: 80px;
+}
+
 @media screen and (max-width: 991px) {
   .styleguide-block {
     text-align: center;
@@ -1977,12 +1989,16 @@ figcaption {
     padding-right: 0;
   }
 
+  .div-block-17 {
+    flex-direction: column;
+  }
+
   .project1skillset {
     grid-template-columns: 1fr 1fr 1fr;
     justify-content: center;
   }
 
-  .mainsection.cc-contact {
+  .mainsection.cc-contact, .resumemain.cc-contact {
     padding-left: 0;
     padding-right: 0;
   }
@@ -2273,6 +2289,10 @@ figcaption {
     padding: 15px;
   }
 
+  .div-block-17 {
+    align-items: center;
+  }
+
   .project1skillset {
     grid-column-gap: 72px;
     grid-row-gap: 32px;
@@ -2286,6 +2306,15 @@ figcaption {
   }
 
   .mainsection.cc-contact {
+    padding: 15px;
+  }
+
+  .resumemain {
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+
+  .resumemain.cc-contact {
     padding: 15px;
   }
 }
