--- a/css/ayoakinnawo.webflow.css
+++ b/css/ayoakinnawo.webflow.css
@@ -1,3 +1,8 @@
+:root {
+  --white: white;
+  --black: black;
+}
+
 .w-layout-grid {
   grid-row-gap: 16px;
   grid-column-gap: 16px;
@@ -901,6 +906,16 @@ figcaption {
   display: flex;
 }
 
+.text-span {
+  mix-blend-mode: normal;
+}
+
+.text-span:hover {
+  border: 1px #000;
+  font-style: normal;
+  text-decoration: none;
+}
+
 .text-span-2 {
   color: #000;
   font-size: 14px;
@@ -971,8 +986,7 @@ figcaption {
 
 .link-block-2 {
   height: 460px;
-  background-image: url('../images/Proj.2-.png');
-  background-position: 50%;
+  background-image: url('../images/Screen-Shot-2023-11-04-at-2.39.57-PM.png');
   background-size: cover;
   border: 1px solid rgba(0, 0, 0, .35);
   border-radius: 20px;
@@ -995,7 +1009,7 @@ figcaption {
 }
 
 .div-block-7 {
-  display: none;
+  display: block;
 }
 
 .secondwork {
@@ -1605,7 +1619,7 @@ figcaption {
 
 .link-block-copy-copy {
   height: 460px;
-  background-image: url('../images/Screen-Shot-2023-07-04-at-1.05.53-PM.png');
+  background-image: url('../images/Screen-Shot-2023-11-04-at-2.53.43-PM.png');
   background-position: 50%;
   background-size: cover;
   background-attachment: scroll;
@@ -1739,6 +1753,26 @@ figcaption {
   background-color: #f4f4f4;
   padding-left: 80px;
   padding-right: 80px;
+}
+
+.div-block-7-copy {
+  display: block;
+}
+
+.link-block-2-copy {
+  height: 460px;
+  background-image: url('../images/Proj.2-.png');
+  background-size: cover;
+  border: 1px solid rgba(0, 0, 0, .35);
+  border-radius: 20px;
+  flex-direction: column;
+  justify-content: center;
+  display: flex;
+  position: relative;
+}
+
+.link-block-2-copy:hover {
+  mix-blend-mode: exclusion;
 }
 
 @media screen and (max-width: 991px) {
