--- a/css/ayoakinnawo.webflow.css
+++ b/css/ayoakinnawo.webflow.css
@@ -3129,6 +3129,7 @@ figcaption {
 
   .mainsection {
     flex-direction: column-reverse;
+    margin-top: 8em;
     display: flex;
   }
 
@@ -3688,6 +3689,10 @@ figcaption {
     display: flex;
   }
 
+  .scroll_dwn {
+    display: none;
+  }
+
   .div-block-134 {
     grid-template-columns: .75fr;
   }
@@ -3702,6 +3707,10 @@ figcaption {
   .heading-jumbo {
     font-size: 36px;
     line-height: 48px;
+  }
+
+  .paragraph-light.cc-position-name {
+    white-space: break-spaces;
   }
 
   .navigation {
@@ -3741,6 +3750,7 @@ figcaption {
   .project-overview-grid {
     width: 100%;
     max-width: none;
+    grid-template-columns: .25fr;
     overflow: visible;
   }
 
@@ -3826,6 +3836,10 @@ figcaption {
 
   .uui-team10_list-2, .uui-team10_component-2 {
     grid-template-columns: 1fr;
+  }
+
+  .text-block-12 {
+    white-space: normal;
   }
 
   .div-block-143 {
@@ -3988,6 +4002,10 @@ figcaption {
 }
 
 @media screen and (max-width: 479px) {
+  #w-node-_0befc76b-828c-2822-f9fa-f2c6de040bc4-ecff4118 {
+    grid-area: 2 / 1 / 3 / 2;
+  }
+
   #w-node-_0befc76b-828c-2822-f9fa-f2c6de040bc9-ecff4118 {
     grid-area: 3 / 1 / 4 / 2;
   }
